@@ -2,6 +2,9 @@
 
 ProtoObject < #Object
 
++ initialize
+	"Subclasses should redefine this method to perform initializations on Class creation"
+
 - initialize
 	"Subclasses should redefine this method to perform initializations on instance creation"
 
